<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pocket Slate</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="refresh">Refresh</string>
    <string name="search_title">Search</string>
    <string name="save_title">Save</string>
    <string name="open_web_title">Open Web</string>
    <string name="share_title">Share</string>
    <string name="search_hint">Search</string>
    <string name="remove_title">Remove</string>
    <string name="section">Sections</string>
    
    <!-- About page  -->
    <string name="about_version">Version 2.0</string>
	<string name="about_copy">© NYIT Campus Slate 2013</string>
	<string name="about_company">NYIT Old Westbury IEEE Software Division</string>
	<string name="about_app">The Pocket Campus Slate app is designed and developed by NYIT students studying Computer Science. The IEEE Software Division is a branch of the IEEE Organization on campus dedicated to creating original work for the school and outside clients.</string>
	<string name="about_feedback">If you would like to send feedback to the developers send an email to nyit-ieee-software-division@googlegroups.com.</string>	
	<string name="nick_text">Nick Corso-Passaro</string>
	<string name="jason_text">Jason Scott</string>
	
    <!-- For StaffActivity testing -->
    <string name="test_title">Erica Brandt – Editor in Chief</string>
    <string name="test_image_url">http://www.campusslate.com/wp-content/uploads/2013/10/erica-298x374.jpg</string>
    <string name="test_content">Erica is a sophomore studying Communication Arts. She is also a member of NYIT\'s cheerleading team. She enjoys writing and shopping.</string>
    <string name="test_link">http://www.campusslate.com/staff/2013/10/08/erica-brandt-managing-editor/</string>
	
	<!-- For ArticleActivity testing -->
	<string name="article_test_title">Unpaid VS Paid: Which Internship is Actually Worth Your Time</string>
	<string name="article_test_category">Top Stories</string>
	<string name="article_test_date">Fri, 27 Sep 2013 02:40:26</string>
	<string name="article_test_content">Pow! That comic book sound comes to mind when you just scored your first internship. Feeling like the undefeated superhero you were destined to be, nothing can stop you now, or so you thought. As of this past June, US District Judge William H. Pauley III had ruled in Manhattan that two unpaid interns for Fox Searchlight Productions should have been paid for their work. This ruling may be the quintessential axe that chops down the freelance internship tree, making matters more complicated to possibly become an unpaid intern. According to a June 13, 2013 Newsday story, the film company had financially abused two interns. Unpaid interns in question, Eric Glatt and Alexander Footman, were considered to have done the work of full-time employees. Their work was for the production of the 2010 Natalie Portman psychological thriller “Black Swan.” The article states that they did not receive any special treatment, and had devoted copious amounts of time to the project, doing the same work as industry professionals. Apparently the tasks completed should have been given to full-time employees. Although this was simply an internship, the judge tried to say that it was unfair for two interns to complete professional level work without being paid minimum wage, or overtime. He’s right, to a certain extent. The question many college students ask upon internship acceptance is “Will this be a paid internship? Or will I have to keep my part-time job at the local diner?” Okay, that may not be everyone’s first question, but money does play a rather large factor in the mind of the busy college student. We college students will do anything to make a quick buck, but the sole purpose of many internships is to learn the value of holding an industry job. To gain a better understanding about how internships work and their future, I had reached out to Ms. Adrienne McNally, Associate Director of Experiential Education at the office of Career Services, who is also aware of this case.  “Technically, internships always have a connection to an academic institution,” McNally said. “It is a form of practical hands-on learning that needs to be tied to a curriculum. The large issue here is compliance with labor laws – federal and state. Any for-profit organization hiring an intern must provide: supervision, training, mentorship and evaluation. An intern must be paid if they do work that benefits the organization.” McNally then pinpoints the central problem of the case, having this to say, “The Black Swan incident highlighted the issue of internships although most colleges would argue that the plaintiffs were not interns because they were not students and not doing the work as part of a college-supervised program. The focus should be on the employer for violating labor laws by having people essentially “volunteer” for them as a for-profit, which is unlawful.” McNally continued, providing more beneficial information every student should hear; “The larger implications of this practice is the displacement of paid employees. The positions these people had should have been part or full-time jobs. This issue reenergized a long-standing national conversation on this topic. So, in fact we have seen a rise in paid internships at companies that traditionally did not pay. A great example of this is Viacom.” Being a college intern is generally acquiring an unpaid job. These opportunities don’t require an explanation as to why there is no pay. If anything, the explanation is that obtaining the internship position is getting paid in the form of hands-on field experience. Internships take the notes out of a classroom, and bring them to life. When asked what should college students of all majors look for when applying for an internship, McNally had this to say: “Students should look for quality of learning in an internship. Students should use their best judgment and the help of Career Services when assessing internships. Think about what separates the internship from a part-time position,” she says. “If there isn’t much of a difference it probably isn’t a great internship.” McNally says to “Think of an internship as an external classroom, only instead of listening to a faculty member lecture you are applying theory to practice under the guidance and supervision of a profession.” McNally also suggests that the “Career Services Internship Certificate Program is a great way to tie your internship to the college free of charge, with or without credit and ensure that the internship meets federal and state guidelines and provides a meaningful academic experience.” That’s just it. The fundamental aspect of this case was that the two plaintiffs were not technically college students. They were volunteers who had worked on their own time, not for credit or tied to an academic plan. It takes the scare out of the situation in regard to current college students who could be afraid of the possible extinction of unpaid internships. Although this court case was a first, it still has made an impact on students who have had internships. Take current Communication Arts Junior Jennifer Haynie for example.</string>
	<string name="article_test_link">http://www.campusslate.com/news/2013/09/26/unpaid-vs-paid-which-internship-is-actually-worth-your-time/</string>
	
	<!-- For OrganizationActivity testing -->
	<string name="org_test_title">American Medical Student Association</string>
	<string name="org_test_acronym">AMSA</string>
</resources>